infra/openfga/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openfga
  namespace: openfga
  annotations:
    cert-manager.io/cluster-issuer: vault-pki-int
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - openfga.192.168.151.10.nip.io
      secretName: openfga-tls
  rules:
    - host: openfga.192.168.151.10.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openfga
                port:
                  number: 8080
